// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DetailModal — 2560x1440 sample > snapshot: depth 1 inside a 2560x1440 viewport wrapper > detail-modal-depth-1-2560x1440 1`] = `
<body>
  <div>
    <div
      style="width: 2560px; height: 1440px;"
    >
      <button
        data-testid="push-one"
      >
        push
      </button>
    </div>
  </div>
  <div
    data-detail-depth="0"
    style="position: fixed; inset: 0px; z-index: 70; display: flex; align-items: flex-start; justify-content: center; padding-top: 5vh; background-color: rgba(0, 0, 0, 0.55); pointer-events: auto;"
  >
    <div
      data-testid="detail-panel-0"
      style="width: 720px; height: 620px; max-height: 85vh; background: linear-gradient(180deg, var(--bg-deep), var(--bg-abyss)); border: 1px solid var(--border-gold); border-radius: 10px; box-shadow: 0 8px 40px rgba(0, 0, 0, 0.7); display: flex; flex-direction: column; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="padding: 12px 16px 10px; border-bottom: 1px solid var(--border-gold); flex-shrink: 0;"
      >
        <div
          style="display: flex; align-items: flex-start; gap: 8px;"
        >
          <div
            style="flex: 1 1 0%;"
          >
            <div
              style="display: flex; align-items: center; flex-wrap: wrap; gap: 0px; margin-bottom: 6px;"
            >
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="cursor: pointer; color: var(--text-secondary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  ENCOUNTER
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: default; color: var(--text-tertiary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 1
                </span>
              </span>
            </div>
          </div>
          <div
            style="display: flex; gap: 4px; align-items: center; flex-shrink: 0;"
          >
            <button
              aria-label="Close detail"
              style="background: none; border: medium; color: var(--text-tertiary); cursor: pointer; font-size: 1.2rem; padding: 0px 4px; line-height: 1;"
            >
              ×
            </button>
          </div>
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.65rem; letter-spacing: 0.14em; text-transform: uppercase; color: var(--sphere-force-bright, var(--accent-gold)); margin-bottom: 4px;"
        >
          ACTOR
        </div>
        <div
          style="font-family: var(--font-display); font-size: 1.25rem; color: var(--text-primary); margin-bottom: 2px; letter-spacing: 0.03em;"
        >
          Page 1
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.7rem; letter-spacing: 0.08em; text-transform: uppercase; color: var(--text-tertiary);"
        >
          IRON · CIVIC GUARD
        </div>
      </div>
      <div
        style="flex: 1 1 0%; overflow-y: auto; padding: 16px;"
      />
      <div
        style="padding: 8px 16px; border-top: 1px solid var(--border-gold); display: flex; justify-content: space-between; align-items: center; flex-shrink: 0;"
      >
        <span
          style="font-size: 0.68rem; color: var(--text-muted); font-style: italic; letter-spacing: 0.02em;"
        >
          ESC closes · ← steps back · the encounter remains paused
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`DetailModal — depth 1 > snapshot: depth 1 > detail-modal-depth-1 1`] = `
<body>
  <div>
    <button
      data-testid="push-all"
    >
      push all
    </button>
  </div>
  <div
    data-detail-depth="0"
    style="position: fixed; inset: 0px; z-index: 70; display: flex; align-items: flex-start; justify-content: center; padding-top: 5vh; background-color: rgba(0, 0, 0, 0.55); pointer-events: auto;"
  >
    <div
      data-testid="detail-panel-0"
      style="width: 720px; height: 620px; max-height: 85vh; background: linear-gradient(180deg, var(--bg-deep), var(--bg-abyss)); border: 1px solid var(--border-gold); border-radius: 10px; box-shadow: 0 8px 40px rgba(0, 0, 0, 0.7); display: flex; flex-direction: column; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="padding: 12px 16px 10px; border-bottom: 1px solid var(--border-gold); flex-shrink: 0;"
      >
        <div
          style="display: flex; align-items: flex-start; gap: 8px;"
        >
          <div
            style="flex: 1 1 0%;"
          >
            <div
              style="display: flex; align-items: center; flex-wrap: wrap; gap: 0px; margin-bottom: 6px;"
            >
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="cursor: pointer; color: var(--text-secondary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  ENCOUNTER
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: default; color: var(--text-tertiary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 1
                </span>
              </span>
            </div>
          </div>
          <div
            style="display: flex; gap: 4px; align-items: center; flex-shrink: 0;"
          >
            <button
              aria-label="Close detail"
              style="background: none; border: medium; color: var(--text-tertiary); cursor: pointer; font-size: 1.2rem; padding: 0px 4px; line-height: 1;"
            >
              ×
            </button>
          </div>
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.65rem; letter-spacing: 0.14em; text-transform: uppercase; color: var(--sphere-force-bright, var(--accent-gold)); margin-bottom: 4px;"
        >
          ACTOR
        </div>
        <div
          style="font-family: var(--font-display); font-size: 1.25rem; color: var(--text-primary); margin-bottom: 2px; letter-spacing: 0.03em;"
        >
          Page 1
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.7rem; letter-spacing: 0.08em; text-transform: uppercase; color: var(--text-tertiary);"
        >
          IRON · CIVIC GUARD
        </div>
      </div>
      <div
        style="flex: 1 1 0%; overflow-y: auto; padding: 16px;"
      />
      <div
        style="padding: 8px 16px; border-top: 1px solid var(--border-gold); display: flex; justify-content: space-between; align-items: center; flex-shrink: 0;"
      >
        <span
          style="font-size: 0.68rem; color: var(--text-muted); font-style: italic; letter-spacing: 0.02em;"
        >
          ESC closes · ← steps back · the encounter remains paused
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`DetailModal — depth 2 > snapshot: depth 2 > detail-modal-depth-2 1`] = `
<body>
  <div>
    <button
      data-testid="push-all"
    >
      push all
    </button>
  </div>
  <div
    data-detail-depth="0"
    style="position: fixed; inset: 0px; z-index: 70; display: flex; align-items: flex-start; justify-content: center; padding-top: 5vh; background-color: rgba(0, 0, 0, 0.55); pointer-events: none;"
  >
    <div
      data-testid="detail-panel-0"
      style="width: 720px; height: 620px; max-height: 85vh; background: linear-gradient(180deg, var(--bg-deep), var(--bg-abyss)); border: 1px solid var(--border-gold); border-radius: 10px; box-shadow: 0 8px 40px rgba(0, 0, 0, 0.7); display: flex; flex-direction: column; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="padding: 12px 16px 10px; border-bottom: 1px solid var(--border-gold); flex-shrink: 0;"
      >
        <div
          style="display: flex; align-items: flex-start; gap: 8px;"
        >
          <div
            style="flex: 1 1 0%;"
          >
            <div
              style="display: flex; align-items: center; flex-wrap: wrap; gap: 0px; margin-bottom: 6px;"
            >
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="cursor: pointer; color: var(--text-secondary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  ENCOUNTER
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: default; color: var(--text-tertiary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 1
                </span>
              </span>
            </div>
          </div>
          <div
            style="display: flex; gap: 4px; align-items: center; flex-shrink: 0;"
          >
            <button
              aria-label="Close detail"
              style="background: none; border: medium; color: var(--text-tertiary); cursor: pointer; font-size: 1.2rem; padding: 0px 4px; line-height: 1;"
            >
              ×
            </button>
          </div>
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.65rem; letter-spacing: 0.14em; text-transform: uppercase; color: var(--sphere-force-bright, var(--accent-gold)); margin-bottom: 4px;"
        >
          ACTOR
        </div>
        <div
          style="font-family: var(--font-display); font-size: 1.25rem; color: var(--text-primary); margin-bottom: 2px; letter-spacing: 0.03em;"
        >
          Page 1
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.7rem; letter-spacing: 0.08em; text-transform: uppercase; color: var(--text-tertiary);"
        >
          IRON · CIVIC GUARD
        </div>
      </div>
      <div
        style="flex: 1 1 0%; overflow-y: auto; padding: 16px;"
      />
      <div
        style="padding: 8px 16px; border-top: 1px solid var(--border-gold); display: flex; justify-content: space-between; align-items: center; flex-shrink: 0;"
      >
        <span
          style="font-size: 0.68rem; color: var(--text-muted); font-style: italic; letter-spacing: 0.02em;"
        >
          ESC closes · ← steps back · the encounter remains paused
        </span>
      </div>
    </div>
  </div>
  <div
    data-detail-depth="1"
    style="position: fixed; inset: 0px; z-index: 72; display: flex; align-items: flex-start; justify-content: center; padding-top: 4vh; background-color: rgba(0, 0, 0, 0.28); pointer-events: auto;"
  >
    <div
      data-testid="detail-panel-1"
      style="width: 720px; height: 620px; max-height: 85vh; background: linear-gradient(180deg, var(--bg-deep), var(--bg-abyss)); border: 1px solid var(--border-gold); border-radius: 10px; box-shadow: 0 8px 40px rgba(0, 0, 0, 0.7); display: flex; flex-direction: column; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="padding: 12px 16px 10px; border-bottom: 1px solid var(--border-gold); flex-shrink: 0;"
      >
        <div
          style="display: flex; align-items: flex-start; gap: 8px;"
        >
          <div
            style="flex: 1 1 0%;"
          >
            <div
              style="display: flex; align-items: center; flex-wrap: wrap; gap: 0px; margin-bottom: 6px;"
            >
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="cursor: pointer; color: var(--text-secondary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  ENCOUNTER
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: pointer; color: var(--text-secondary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 1
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: default; color: var(--text-tertiary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 2
                </span>
              </span>
            </div>
          </div>
          <div
            style="display: flex; gap: 4px; align-items: center; flex-shrink: 0;"
          >
            <button
              aria-label="Go back"
              style="background: none; border: medium; color: var(--text-tertiary); cursor: pointer; font-size: 1.1rem; padding: 0px 4px; line-height: 1;"
            >
              ←
            </button>
            <button
              aria-label="Close detail"
              style="background: none; border: medium; color: var(--text-tertiary); cursor: pointer; font-size: 1.2rem; padding: 0px 4px; line-height: 1;"
            >
              ×
            </button>
          </div>
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.65rem; letter-spacing: 0.14em; text-transform: uppercase; color: var(--sphere-force-bright, var(--accent-gold)); margin-bottom: 4px;"
        >
          ACTOR
        </div>
        <div
          style="font-family: var(--font-display); font-size: 1.25rem; color: var(--text-primary); margin-bottom: 2px; letter-spacing: 0.03em;"
        >
          Page 2
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.7rem; letter-spacing: 0.08em; text-transform: uppercase; color: var(--text-tertiary);"
        >
          IRON · CIVIC GUARD
        </div>
      </div>
      <div
        style="flex: 1 1 0%; overflow-y: auto; padding: 16px;"
      />
      <div
        style="padding: 8px 16px; border-top: 1px solid var(--border-gold); display: flex; justify-content: space-between; align-items: center; flex-shrink: 0;"
      >
        <span
          style="font-size: 0.68rem; color: var(--text-muted); font-style: italic; letter-spacing: 0.02em;"
        >
          ESC closes · ← steps back · the encounter remains paused
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`DetailModal — depth 4 > snapshot: depth 4 > detail-modal-depth-4 1`] = `
<body>
  <div>
    <button
      data-testid="push-all"
    >
      push all
    </button>
  </div>
  <div
    data-detail-depth="0"
    style="position: fixed; inset: 0px; z-index: 70; display: flex; align-items: flex-start; justify-content: center; padding-top: 5vh; background-color: rgba(0, 0, 0, 0.55); pointer-events: none;"
  >
    <div
      data-testid="detail-panel-0"
      style="width: 720px; height: 620px; max-height: 85vh; background: linear-gradient(180deg, var(--bg-deep), var(--bg-abyss)); border: 1px solid var(--border-gold); border-radius: 10px; box-shadow: 0 8px 40px rgba(0, 0, 0, 0.7); display: flex; flex-direction: column; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="padding: 12px 16px 10px; border-bottom: 1px solid var(--border-gold); flex-shrink: 0;"
      >
        <div
          style="display: flex; align-items: flex-start; gap: 8px;"
        >
          <div
            style="flex: 1 1 0%;"
          >
            <div
              style="display: flex; align-items: center; flex-wrap: wrap; gap: 0px; margin-bottom: 6px;"
            >
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="cursor: pointer; color: var(--text-secondary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  ENCOUNTER
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: default; color: var(--text-tertiary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 1
                </span>
              </span>
            </div>
          </div>
          <div
            style="display: flex; gap: 4px; align-items: center; flex-shrink: 0;"
          >
            <button
              aria-label="Close detail"
              style="background: none; border: medium; color: var(--text-tertiary); cursor: pointer; font-size: 1.2rem; padding: 0px 4px; line-height: 1;"
            >
              ×
            </button>
          </div>
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.65rem; letter-spacing: 0.14em; text-transform: uppercase; color: var(--sphere-force-bright, var(--accent-gold)); margin-bottom: 4px;"
        >
          ACTOR
        </div>
        <div
          style="font-family: var(--font-display); font-size: 1.25rem; color: var(--text-primary); margin-bottom: 2px; letter-spacing: 0.03em;"
        >
          Page 1
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.7rem; letter-spacing: 0.08em; text-transform: uppercase; color: var(--text-tertiary);"
        >
          IRON · CIVIC GUARD
        </div>
      </div>
      <div
        style="flex: 1 1 0%; overflow-y: auto; padding: 16px;"
      />
      <div
        style="padding: 8px 16px; border-top: 1px solid var(--border-gold); display: flex; justify-content: space-between; align-items: center; flex-shrink: 0;"
      >
        <span
          style="font-size: 0.68rem; color: var(--text-muted); font-style: italic; letter-spacing: 0.02em;"
        >
          ESC closes · ← steps back · the encounter remains paused
        </span>
      </div>
    </div>
  </div>
  <div
    data-detail-depth="1"
    style="position: fixed; inset: 0px; z-index: 72; display: flex; align-items: flex-start; justify-content: center; padding-top: 4vh; background-color: rgba(0, 0, 0, 0.28); pointer-events: none;"
  >
    <div
      data-testid="detail-panel-1"
      style="width: 720px; height: 620px; max-height: 85vh; background: linear-gradient(180deg, var(--bg-deep), var(--bg-abyss)); border: 1px solid var(--border-gold); border-radius: 10px; box-shadow: 0 8px 40px rgba(0, 0, 0, 0.7); display: flex; flex-direction: column; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="padding: 12px 16px 10px; border-bottom: 1px solid var(--border-gold); flex-shrink: 0;"
      >
        <div
          style="display: flex; align-items: flex-start; gap: 8px;"
        >
          <div
            style="flex: 1 1 0%;"
          >
            <div
              style="display: flex; align-items: center; flex-wrap: wrap; gap: 0px; margin-bottom: 6px;"
            >
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="cursor: pointer; color: var(--text-secondary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  ENCOUNTER
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: pointer; color: var(--text-secondary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 1
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: default; color: var(--text-tertiary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 2
                </span>
              </span>
            </div>
          </div>
          <div
            style="display: flex; gap: 4px; align-items: center; flex-shrink: 0;"
          >
            <button
              aria-label="Go back"
              style="background: none; border: medium; color: var(--text-tertiary); cursor: pointer; font-size: 1.1rem; padding: 0px 4px; line-height: 1;"
            >
              ←
            </button>
            <button
              aria-label="Close detail"
              style="background: none; border: medium; color: var(--text-tertiary); cursor: pointer; font-size: 1.2rem; padding: 0px 4px; line-height: 1;"
            >
              ×
            </button>
          </div>
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.65rem; letter-spacing: 0.14em; text-transform: uppercase; color: var(--sphere-force-bright, var(--accent-gold)); margin-bottom: 4px;"
        >
          ACTOR
        </div>
        <div
          style="font-family: var(--font-display); font-size: 1.25rem; color: var(--text-primary); margin-bottom: 2px; letter-spacing: 0.03em;"
        >
          Page 2
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.7rem; letter-spacing: 0.08em; text-transform: uppercase; color: var(--text-tertiary);"
        >
          IRON · CIVIC GUARD
        </div>
      </div>
      <div
        style="flex: 1 1 0%; overflow-y: auto; padding: 16px;"
      />
      <div
        style="padding: 8px 16px; border-top: 1px solid var(--border-gold); display: flex; justify-content: space-between; align-items: center; flex-shrink: 0;"
      >
        <span
          style="font-size: 0.68rem; color: var(--text-muted); font-style: italic; letter-spacing: 0.02em;"
        >
          ESC closes · ← steps back · the encounter remains paused
        </span>
      </div>
    </div>
  </div>
  <div
    data-detail-depth="2"
    style="position: fixed; inset: 0px; z-index: 74; display: flex; align-items: flex-start; justify-content: center; padding-top: 3vh; background-color: rgba(0, 0, 0, 0.28); pointer-events: none;"
  >
    <div
      data-testid="detail-panel-2"
      style="width: 720px; height: 620px; max-height: 85vh; background: linear-gradient(180deg, var(--bg-deep), var(--bg-abyss)); border: 1px solid var(--border-gold); border-radius: 10px; box-shadow: 0 8px 40px rgba(0, 0, 0, 0.7); display: flex; flex-direction: column; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="padding: 12px 16px 10px; border-bottom: 1px solid var(--border-gold); flex-shrink: 0;"
      >
        <div
          style="display: flex; align-items: flex-start; gap: 8px;"
        >
          <div
            style="flex: 1 1 0%;"
          >
            <div
              style="display: flex; align-items: center; flex-wrap: wrap; gap: 0px; margin-bottom: 6px;"
            >
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="cursor: pointer; color: var(--text-secondary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  ENCOUNTER
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: pointer; color: var(--text-secondary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 1
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: pointer; color: var(--text-secondary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 2
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: default; color: var(--text-tertiary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 3
                </span>
              </span>
            </div>
          </div>
          <div
            style="display: flex; gap: 4px; align-items: center; flex-shrink: 0;"
          >
            <button
              aria-label="Go back"
              style="background: none; border: medium; color: var(--text-tertiary); cursor: pointer; font-size: 1.1rem; padding: 0px 4px; line-height: 1;"
            >
              ←
            </button>
            <button
              aria-label="Close detail"
              style="background: none; border: medium; color: var(--text-tertiary); cursor: pointer; font-size: 1.2rem; padding: 0px 4px; line-height: 1;"
            >
              ×
            </button>
          </div>
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.65rem; letter-spacing: 0.14em; text-transform: uppercase; color: var(--sphere-force-bright, var(--accent-gold)); margin-bottom: 4px;"
        >
          ACTOR
        </div>
        <div
          style="font-family: var(--font-display); font-size: 1.25rem; color: var(--text-primary); margin-bottom: 2px; letter-spacing: 0.03em;"
        >
          Page 3
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.7rem; letter-spacing: 0.08em; text-transform: uppercase; color: var(--text-tertiary);"
        >
          IRON · CIVIC GUARD
        </div>
      </div>
      <div
        style="flex: 1 1 0%; overflow-y: auto; padding: 16px;"
      />
      <div
        style="padding: 8px 16px; border-top: 1px solid var(--border-gold); display: flex; justify-content: space-between; align-items: center; flex-shrink: 0;"
      >
        <span
          style="font-size: 0.68rem; color: var(--text-muted); font-style: italic; letter-spacing: 0.02em;"
        >
          ESC closes · ← steps back · the encounter remains paused
        </span>
      </div>
    </div>
  </div>
  <div
    data-detail-depth="3"
    style="position: fixed; inset: 0px; z-index: 76; display: flex; align-items: flex-start; justify-content: center; padding-top: 3vh; background-color: rgba(0, 0, 0, 0.28); pointer-events: auto;"
  >
    <div
      data-testid="detail-panel-3"
      style="width: 720px; height: 620px; max-height: 85vh; background: linear-gradient(180deg, var(--bg-deep), var(--bg-abyss)); border: 1px solid var(--border-gold); border-radius: 10px; box-shadow: 0 8px 40px rgba(0, 0, 0, 0.7); display: flex; flex-direction: column; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="padding: 12px 16px 10px; border-bottom: 1px solid var(--border-gold); flex-shrink: 0;"
      >
        <div
          style="display: flex; align-items: flex-start; gap: 8px;"
        >
          <div
            style="flex: 1 1 0%;"
          >
            <div
              style="display: flex; align-items: center; flex-wrap: wrap; gap: 0px; margin-bottom: 6px;"
            >
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="cursor: default; color: var(--text-tertiary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  …
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: pointer; color: var(--text-secondary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 2
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: pointer; color: var(--text-secondary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 3
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: default; color: var(--text-tertiary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 4
                </span>
              </span>
            </div>
          </div>
          <div
            style="display: flex; gap: 4px; align-items: center; flex-shrink: 0;"
          >
            <button
              aria-label="Go back"
              style="background: none; border: medium; color: var(--text-tertiary); cursor: pointer; font-size: 1.1rem; padding: 0px 4px; line-height: 1;"
            >
              ←
            </button>
            <button
              aria-label="Close detail"
              style="background: none; border: medium; color: var(--text-tertiary); cursor: pointer; font-size: 1.2rem; padding: 0px 4px; line-height: 1;"
            >
              ×
            </button>
          </div>
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.65rem; letter-spacing: 0.14em; text-transform: uppercase; color: var(--sphere-force-bright, var(--accent-gold)); margin-bottom: 4px;"
        >
          ACTOR
        </div>
        <div
          style="font-family: var(--font-display); font-size: 1.25rem; color: var(--text-primary); margin-bottom: 2px; letter-spacing: 0.03em;"
        >
          Page 4
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.7rem; letter-spacing: 0.08em; text-transform: uppercase; color: var(--text-tertiary);"
        >
          IRON · CIVIC GUARD
        </div>
      </div>
      <div
        style="flex: 1 1 0%; overflow-y: auto; padding: 16px;"
      />
      <div
        style="padding: 8px 16px; border-top: 1px solid var(--border-gold); display: flex; justify-content: space-between; align-items: center; flex-shrink: 0;"
      >
        <span
          style="font-size: 0.68rem; color: var(--text-muted); font-style: italic; letter-spacing: 0.02em;"
        >
          ESC closes · ← steps back · the encounter remains paused
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`DetailModal — depth 5 (breadcrumb collapses to \`…\`) > snapshot: depth 5 > detail-modal-depth-5 1`] = `
<body>
  <div>
    <button
      data-testid="push-all"
    >
      push all
    </button>
  </div>
  <div
    data-detail-depth="0"
    style="position: fixed; inset: 0px; z-index: 70; display: flex; align-items: flex-start; justify-content: center; padding-top: 5vh; background-color: rgba(0, 0, 0, 0.55); pointer-events: none;"
  >
    <div
      data-testid="detail-panel-0"
      style="width: 720px; height: 620px; max-height: 85vh; background: linear-gradient(180deg, var(--bg-deep), var(--bg-abyss)); border: 1px solid var(--border-gold); border-radius: 10px; box-shadow: 0 8px 40px rgba(0, 0, 0, 0.7); display: flex; flex-direction: column; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="padding: 12px 16px 10px; border-bottom: 1px solid var(--border-gold); flex-shrink: 0;"
      >
        <div
          style="display: flex; align-items: flex-start; gap: 8px;"
        >
          <div
            style="flex: 1 1 0%;"
          >
            <div
              style="display: flex; align-items: center; flex-wrap: wrap; gap: 0px; margin-bottom: 6px;"
            >
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="cursor: pointer; color: var(--text-secondary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  ENCOUNTER
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: default; color: var(--text-tertiary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 1
                </span>
              </span>
            </div>
          </div>
          <div
            style="display: flex; gap: 4px; align-items: center; flex-shrink: 0;"
          >
            <button
              aria-label="Close detail"
              style="background: none; border: medium; color: var(--text-tertiary); cursor: pointer; font-size: 1.2rem; padding: 0px 4px; line-height: 1;"
            >
              ×
            </button>
          </div>
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.65rem; letter-spacing: 0.14em; text-transform: uppercase; color: var(--sphere-force-bright, var(--accent-gold)); margin-bottom: 4px;"
        >
          ACTOR
        </div>
        <div
          style="font-family: var(--font-display); font-size: 1.25rem; color: var(--text-primary); margin-bottom: 2px; letter-spacing: 0.03em;"
        >
          Page 1
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.7rem; letter-spacing: 0.08em; text-transform: uppercase; color: var(--text-tertiary);"
        >
          IRON · CIVIC GUARD
        </div>
      </div>
      <div
        style="flex: 1 1 0%; overflow-y: auto; padding: 16px;"
      />
      <div
        style="padding: 8px 16px; border-top: 1px solid var(--border-gold); display: flex; justify-content: space-between; align-items: center; flex-shrink: 0;"
      >
        <span
          style="font-size: 0.68rem; color: var(--text-muted); font-style: italic; letter-spacing: 0.02em;"
        >
          ESC closes · ← steps back · the encounter remains paused
        </span>
      </div>
    </div>
  </div>
  <div
    data-detail-depth="1"
    style="position: fixed; inset: 0px; z-index: 72; display: flex; align-items: flex-start; justify-content: center; padding-top: 4vh; background-color: rgba(0, 0, 0, 0.28); pointer-events: none;"
  >
    <div
      data-testid="detail-panel-1"
      style="width: 720px; height: 620px; max-height: 85vh; background: linear-gradient(180deg, var(--bg-deep), var(--bg-abyss)); border: 1px solid var(--border-gold); border-radius: 10px; box-shadow: 0 8px 40px rgba(0, 0, 0, 0.7); display: flex; flex-direction: column; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="padding: 12px 16px 10px; border-bottom: 1px solid var(--border-gold); flex-shrink: 0;"
      >
        <div
          style="display: flex; align-items: flex-start; gap: 8px;"
        >
          <div
            style="flex: 1 1 0%;"
          >
            <div
              style="display: flex; align-items: center; flex-wrap: wrap; gap: 0px; margin-bottom: 6px;"
            >
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="cursor: pointer; color: var(--text-secondary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  ENCOUNTER
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: pointer; color: var(--text-secondary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 1
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: default; color: var(--text-tertiary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 2
                </span>
              </span>
            </div>
          </div>
          <div
            style="display: flex; gap: 4px; align-items: center; flex-shrink: 0;"
          >
            <button
              aria-label="Go back"
              style="background: none; border: medium; color: var(--text-tertiary); cursor: pointer; font-size: 1.1rem; padding: 0px 4px; line-height: 1;"
            >
              ←
            </button>
            <button
              aria-label="Close detail"
              style="background: none; border: medium; color: var(--text-tertiary); cursor: pointer; font-size: 1.2rem; padding: 0px 4px; line-height: 1;"
            >
              ×
            </button>
          </div>
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.65rem; letter-spacing: 0.14em; text-transform: uppercase; color: var(--sphere-force-bright, var(--accent-gold)); margin-bottom: 4px;"
        >
          ACTOR
        </div>
        <div
          style="font-family: var(--font-display); font-size: 1.25rem; color: var(--text-primary); margin-bottom: 2px; letter-spacing: 0.03em;"
        >
          Page 2
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.7rem; letter-spacing: 0.08em; text-transform: uppercase; color: var(--text-tertiary);"
        >
          IRON · CIVIC GUARD
        </div>
      </div>
      <div
        style="flex: 1 1 0%; overflow-y: auto; padding: 16px;"
      />
      <div
        style="padding: 8px 16px; border-top: 1px solid var(--border-gold); display: flex; justify-content: space-between; align-items: center; flex-shrink: 0;"
      >
        <span
          style="font-size: 0.68rem; color: var(--text-muted); font-style: italic; letter-spacing: 0.02em;"
        >
          ESC closes · ← steps back · the encounter remains paused
        </span>
      </div>
    </div>
  </div>
  <div
    data-detail-depth="2"
    style="position: fixed; inset: 0px; z-index: 74; display: flex; align-items: flex-start; justify-content: center; padding-top: 3vh; background-color: rgba(0, 0, 0, 0.28); pointer-events: none;"
  >
    <div
      data-testid="detail-panel-2"
      style="width: 720px; height: 620px; max-height: 85vh; background: linear-gradient(180deg, var(--bg-deep), var(--bg-abyss)); border: 1px solid var(--border-gold); border-radius: 10px; box-shadow: 0 8px 40px rgba(0, 0, 0, 0.7); display: flex; flex-direction: column; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="padding: 12px 16px 10px; border-bottom: 1px solid var(--border-gold); flex-shrink: 0;"
      >
        <div
          style="display: flex; align-items: flex-start; gap: 8px;"
        >
          <div
            style="flex: 1 1 0%;"
          >
            <div
              style="display: flex; align-items: center; flex-wrap: wrap; gap: 0px; margin-bottom: 6px;"
            >
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="cursor: pointer; color: var(--text-secondary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  ENCOUNTER
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: pointer; color: var(--text-secondary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 1
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: pointer; color: var(--text-secondary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 2
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: default; color: var(--text-tertiary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 3
                </span>
              </span>
            </div>
          </div>
          <div
            style="display: flex; gap: 4px; align-items: center; flex-shrink: 0;"
          >
            <button
              aria-label="Go back"
              style="background: none; border: medium; color: var(--text-tertiary); cursor: pointer; font-size: 1.1rem; padding: 0px 4px; line-height: 1;"
            >
              ←
            </button>
            <button
              aria-label="Close detail"
              style="background: none; border: medium; color: var(--text-tertiary); cursor: pointer; font-size: 1.2rem; padding: 0px 4px; line-height: 1;"
            >
              ×
            </button>
          </div>
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.65rem; letter-spacing: 0.14em; text-transform: uppercase; color: var(--sphere-force-bright, var(--accent-gold)); margin-bottom: 4px;"
        >
          ACTOR
        </div>
        <div
          style="font-family: var(--font-display); font-size: 1.25rem; color: var(--text-primary); margin-bottom: 2px; letter-spacing: 0.03em;"
        >
          Page 3
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.7rem; letter-spacing: 0.08em; text-transform: uppercase; color: var(--text-tertiary);"
        >
          IRON · CIVIC GUARD
        </div>
      </div>
      <div
        style="flex: 1 1 0%; overflow-y: auto; padding: 16px;"
      />
      <div
        style="padding: 8px 16px; border-top: 1px solid var(--border-gold); display: flex; justify-content: space-between; align-items: center; flex-shrink: 0;"
      >
        <span
          style="font-size: 0.68rem; color: var(--text-muted); font-style: italic; letter-spacing: 0.02em;"
        >
          ESC closes · ← steps back · the encounter remains paused
        </span>
      </div>
    </div>
  </div>
  <div
    data-detail-depth="3"
    style="position: fixed; inset: 0px; z-index: 76; display: flex; align-items: flex-start; justify-content: center; padding-top: 3vh; background-color: rgba(0, 0, 0, 0.28); pointer-events: none;"
  >
    <div
      data-testid="detail-panel-3"
      style="width: 720px; height: 620px; max-height: 85vh; background: linear-gradient(180deg, var(--bg-deep), var(--bg-abyss)); border: 1px solid var(--border-gold); border-radius: 10px; box-shadow: 0 8px 40px rgba(0, 0, 0, 0.7); display: flex; flex-direction: column; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="padding: 12px 16px 10px; border-bottom: 1px solid var(--border-gold); flex-shrink: 0;"
      >
        <div
          style="display: flex; align-items: flex-start; gap: 8px;"
        >
          <div
            style="flex: 1 1 0%;"
          >
            <div
              style="display: flex; align-items: center; flex-wrap: wrap; gap: 0px; margin-bottom: 6px;"
            >
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="cursor: default; color: var(--text-tertiary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  …
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: pointer; color: var(--text-secondary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 2
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: pointer; color: var(--text-secondary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 3
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: default; color: var(--text-tertiary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 4
                </span>
              </span>
            </div>
          </div>
          <div
            style="display: flex; gap: 4px; align-items: center; flex-shrink: 0;"
          >
            <button
              aria-label="Go back"
              style="background: none; border: medium; color: var(--text-tertiary); cursor: pointer; font-size: 1.1rem; padding: 0px 4px; line-height: 1;"
            >
              ←
            </button>
            <button
              aria-label="Close detail"
              style="background: none; border: medium; color: var(--text-tertiary); cursor: pointer; font-size: 1.2rem; padding: 0px 4px; line-height: 1;"
            >
              ×
            </button>
          </div>
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.65rem; letter-spacing: 0.14em; text-transform: uppercase; color: var(--sphere-force-bright, var(--accent-gold)); margin-bottom: 4px;"
        >
          ACTOR
        </div>
        <div
          style="font-family: var(--font-display); font-size: 1.25rem; color: var(--text-primary); margin-bottom: 2px; letter-spacing: 0.03em;"
        >
          Page 4
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.7rem; letter-spacing: 0.08em; text-transform: uppercase; color: var(--text-tertiary);"
        >
          IRON · CIVIC GUARD
        </div>
      </div>
      <div
        style="flex: 1 1 0%; overflow-y: auto; padding: 16px;"
      />
      <div
        style="padding: 8px 16px; border-top: 1px solid var(--border-gold); display: flex; justify-content: space-between; align-items: center; flex-shrink: 0;"
      >
        <span
          style="font-size: 0.68rem; color: var(--text-muted); font-style: italic; letter-spacing: 0.02em;"
        >
          ESC closes · ← steps back · the encounter remains paused
        </span>
      </div>
    </div>
  </div>
  <div
    data-detail-depth="4"
    style="position: fixed; inset: 0px; z-index: 78; display: flex; align-items: flex-start; justify-content: center; padding-top: 3vh; background-color: rgba(0, 0, 0, 0.28); pointer-events: auto;"
  >
    <div
      data-testid="detail-panel-4"
      style="width: 720px; height: 620px; max-height: 85vh; background: linear-gradient(180deg, var(--bg-deep), var(--bg-abyss)); border: 1px solid var(--border-gold); border-radius: 10px; box-shadow: 0 8px 40px rgba(0, 0, 0, 0.7); display: flex; flex-direction: column; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="padding: 12px 16px 10px; border-bottom: 1px solid var(--border-gold); flex-shrink: 0;"
      >
        <div
          style="display: flex; align-items: flex-start; gap: 8px;"
        >
          <div
            style="flex: 1 1 0%;"
          >
            <div
              style="display: flex; align-items: center; flex-wrap: wrap; gap: 0px; margin-bottom: 6px;"
            >
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="cursor: default; color: var(--text-tertiary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  …
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: pointer; color: var(--text-secondary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 3
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: pointer; color: var(--text-secondary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 4
                </span>
              </span>
              <span
                style="display: flex; align-items: center;"
              >
                <span
                  style="margin: 0px 4px; opacity: 0.4; user-select: none;"
                >
                  ›
                </span>
                <span
                  style="cursor: default; color: var(--text-tertiary); text-decoration: none; font-size: 0.7rem; letter-spacing: 0.04em; font-family: var(--font-display); text-transform: uppercase;"
                >
                  PAGE 5
                </span>
              </span>
            </div>
          </div>
          <div
            style="display: flex; gap: 4px; align-items: center; flex-shrink: 0;"
          >
            <button
              aria-label="Go back"
              style="background: none; border: medium; color: var(--text-tertiary); cursor: pointer; font-size: 1.1rem; padding: 0px 4px; line-height: 1;"
            >
              ←
            </button>
            <button
              aria-label="Close detail"
              style="background: none; border: medium; color: var(--text-tertiary); cursor: pointer; font-size: 1.2rem; padding: 0px 4px; line-height: 1;"
            >
              ×
            </button>
          </div>
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.65rem; letter-spacing: 0.14em; text-transform: uppercase; color: var(--sphere-force-bright, var(--accent-gold)); margin-bottom: 4px;"
        >
          ACTOR
        </div>
        <div
          style="font-family: var(--font-display); font-size: 1.25rem; color: var(--text-primary); margin-bottom: 2px; letter-spacing: 0.03em;"
        >
          Page 5
        </div>
        <div
          style="font-family: var(--font-display); font-size: 0.7rem; letter-spacing: 0.08em; text-transform: uppercase; color: var(--text-tertiary);"
        >
          IRON · CIVIC GUARD
        </div>
      </div>
      <div
        style="flex: 1 1 0%; overflow-y: auto; padding: 16px;"
      />
      <div
        style="padding: 8px 16px; border-top: 1px solid var(--border-gold); display: flex; justify-content: space-between; align-items: center; flex-shrink: 0;"
      >
        <span
          style="font-size: 0.68rem; color: var(--text-muted); font-style: italic; letter-spacing: 0.02em;"
        >
          ESC closes · ← steps back · the encounter remains paused
        </span>
      </div>
    </div>
  </div>
</body>
`;
